--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,13 @@
   <groupId>cn.sh.flink.learning</groupId>
   <artifactId>flink-learning</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
   <name>flink-learning</name>
+
+  <modules>
+    <module>udf</module>
+  </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
